--- a/interactive_fluid/package.json
+++ b/interactive_fluid/package.json
@@ -8,5 +8,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "three": "^0.178.0"
+  }
 }
