--- a/landingPage/morphs_logox/package.json
+++ b/landingPage/morphs_logox/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.42",
     "gsap": "^3.13.0",
     "split-type": "^0.3.4",
     "vite": "^7.0.4"
